<resources>
    <string name="app_name">云+</string>
    <string name="app_name_zhihuichengjian">智慧城建</string>
    <string name="app_name_huaxiayinhang">华夏管理云</string>
    <string name="app_name_beiqi">云+</string>
    <string name="app_name_chinatower">中国铁塔报账</string>
    <string name="reclick_to_desktop">再按一次退出程序</string>
    <string name="Network_Mobile">已经连接到移动网络</string>
    <string name="Network_WIFI">已经连接到WIFI</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="resolution_warning">您的设备分辨率小于800*480，无法运行此程序</string>
    <string name="retry">重试</string>
    <string name="re_login">重新登录</string>
    <string name="software_service_term">服务协议</string>
    <string name="update_fail">更新失败</string>
    <string name="downloading_package">下载中，请稍候....</string>
    <string name="service_term">服务协议</string>
    <string name="prompt">提示</string>
    <string name="nothing">无 </string>
    <string name="function_intr">功能介绍 </string>
    <string name="enter_app">进入应用</string>
    <string name="sweep">扫一扫</string>
    <string name="send">发送</string>
    <string name="picture">图片</string>
    <string name="album">相册</string>
    <string name="take_photo">拍照</string>
    <string name="mention">提及</string>
    <string name="file">文件</string>
    <string name="next_step">下一步</string>
    <string name="pull_down_load_history">下拉加载历史消息</string>
    <string name="if_confirm_signout">您确定要退出登录吗?</string>
    <string name="if_delect_current_item">删除当前选项</string>
    <string name="exit">退出</string>
    <string name="open">打开</string>
    <string name="add">添加</string>
    <string name="update">更新</string>
    <string name="download">下载</string>
    <string name="confirm_modify_language">确定修改语言</string>
    <string name="resolution_valiad">您的设备分辨率小于800*480无法运行此程序</string>
    <string name="file_type_not_recognize">不可识别的文件类型</string>
    <string name="return_app">返回应用</string>
    <string name="modify_success">修改成功</string>
    <string name="save_success">保存成功</string>
    <string name="save_fail">保存失败</string>
    <string name="picture_cannot_show">图片无法显示</string>
    <string name="cannot_download_for_network_exception">网络有问题，无法下载</string>
    <string name="cannot_show_for_too_big">图片太大无法显示</string>
    <string name="unknown_error">未知的错误</string>
    <string name="check_update_text">检查新版本</string>
    <string name="app_is_lastest_version">当前已是最新版本</string>
    <string name="check_update_fail">检查新版本失败</string>
    <string name="upgrade">立即更新</string>
    <string name="not_upgrade">下次再说</string>
    <string name="app_update_remind">更新提醒</string>
    <string name="app_last_version">最新版本</string>
    <string name="more_work_place">更多办公点...</string>
    <string name="cancel_filter">取消过滤</string>
    <string name="only_free">仅显示空闲</string>
    <string name="file_no_identifiable">不能识别的文件类型</string>
    <string name="login_code_login_text">短信登录</string>
    <string name="invite_friends_text">把云+推荐给朋友</string>
    <string name="tab_not_support_tips">%1$s功能已改版，请<Data><![CDATA[<font color=\'#0F7BCA\'>升级到最新版本</font>]]></Data></string>
    <string name="choose">选择</string>
    <string name="file_type">文件类型</string>
    <string name="app_update_prepare">准备下载</string>
    <string name="app_update_error">更新失败</string>
    <string name="app_update_loaded">已下载：</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="monday">星期一</string>
    <string name="tuesday">星期二</string>
    <string name="wednesday">星期三</string>
    <string name="thursday">星期四</string>
    <string name="friday">星期五</string>
    <string name="saturday">星期六</string>
    <string name="sunday">星期日</string>
    <string name="today">今天</string>
    <string name="tomorrow">明天</string>
    <string name="after">后天</string>
    <string name="no_more_data">无更多加载项</string>
    <string name="tips">提示</string>
    <string name="confirm">确定</string>
    <string name="begin">开始</string>
    <string name="end">结束</string>
    <string name="yesterday">昨天</string>
    <string name="days_ago">%1$d天前</string>
    <string name="days_after">%1$d天后</string>
    <string name="the_day_before_yesterday">前天</string>
    <string name="format_default">yyyy-MM-dd HH:mm:ss</string>
    <string name="format_date_group_by">yyyy-MM-dd</string>
    <string name="format_year_month_day">yyyy\'年\'MM\'月\'dd\'日\'</string>
    <string name="format_hour_minute">HH:mm</string>
    <string name="format_utc">yyyy-MM-dd\'T\'HH:mm:ss\'.\'SSS\'Z\'</string>
    <string name="format_year_month_day_by_dash">yyyy-MM-dd</string>
    <string name="not_support_upload">不支持没有后缀名的文件上传</string>
    <string name="format_month_day">MM\'月\'dd\'日\'</string>
    <string name="format_task_month_day">MM.dd</string>
    <string name="format_year_month_day_hour_minute">yyyy\'年\'MM\'月\'dd\'日\' HH:mm</string>
    <string name="format_month_day_hour_minute">MM\'月\'dd\'日\' HH:mm</string>
    <string name="format_year_month">yyyy\'年\'MM\'月\'</string>
    <string name="time_null">无</string>
    <string name="cutdown_now">今</string>
    <string name="cutdown_tomorrow">明</string>
    <string name="cutdown_day">天</string>
    <string name="cutdown_yestoday">昨</string>
    <string name="cutdown_month">月</string>
    <string name="notice">通知</string>
    <string name="close">关闭</string>
    <string name="commoly_use_app">常用</string>
    <string name="app_init">正在初始化</string>
    <string name="news_content_cant_empty">内容不能为空</string>
    <string name="help">帮助</string>
    <string name="load_data_failed">加载数据失败</string>
    <string name="communication_search">搜索</string>
    <string name="alert">提醒</string>
    <string name="analysis">分析</string>
    <string name="please_input_remark">请输入备注信息</string>
    <string name="alert_cycle">提醒周期</string>
    <string name="cycle">周期</string>
    <string name="calendar_divide_into_groups">分组</string>
    <string name="quarter">季度</string>
    <string name="monthly_a">月度</string>
    <string name="repeat">重复</string>
    <string name="add_event">添加事件</string>
    <string name="calendar">日历</string>
    <string name="all_day">全天</string>
    <string name="delete_group_member"> 删除群成员</string>
    <string name="tax_ticket_info"> 增值税专用发票开票信息</string>
    <string name="channel_group_info">群详情</string>
    <string name="channel_group_name">群名称</string>
    <string name="channel_group_image"> 群图片</string>
    <string name="channel_group_file"> 群文件</string>
    <string name="channel_group_members_name"> 群名称</string>
    <string name="channel_group_qrcode">群二维码</string>
    <string name="channel_set_top"> 置顶</string>
    <string name="message_without_interruption">消息免打扰</string>
    <string name="login_hint_text">用户名/邮箱/手机号</string>
    <string name="modify_group_name">群名片</string>
    <string name="choose_common_office">常用办公地点</string>
    <string name="please_click_choosing_time">请点击选择时间</string>
    <string name="meeting_room">会议室</string>
    <string name="building">建筑</string>
    <string name="am">上午</string>
    <string name="please_input_change">请输入修改</string>
    <string name="my_stroke">我的行程</string>
    <string name="title">标题</string>
    <string name="channel_hide_chat">隐藏聊天</string>
    <string name="upload_at">上传于</string>
    <string name="confirm_checkin">确认参加</string>
    <string name="name">名字</string>
    <string name="size">大小</string>
    <string name="use_map">使用地图导航</string>
    <string name="use_gaode_map">使用高德地图导航</string>
    <string name="choose_begin_end_time">选择开始结束时间</string>
    <string name="add_new_task">新增待办</string>
    <string name="picture_path_null">图片路径为空</string>
    <string name="trip_detail">行程详情</string>
    <string name="trip_date">行程日期</string>
    <string name="ticket_cost">票价</string>
    <string name="triper"> 乘车人</string>
    <string name="seat_num"> 座次</string>
    <string name="train_num"> 车次</string>
    <string name="arrive_time"> 到达时间</string>
    <string name="arrive_date">到达日期</string>
    <string name="arrive_city"> 到达城市 </string>
    <string name="terminus">终点站 </string>
    <string name="start_city">出发城市</string>
    <string name="start_station">始发站</string>
    <string name="trip">行程</string>
    <string name="news">新闻</string>
    <string name="back">返回</string>
    <string name="preview">预览</string>
    <string name="photo">照片</string>
    <string name="heading">名称</string>
    <string name="taxpayer_identification_number">纳税人识别号</string>
    <string name="address">地址</string>
    <string name="phone_number">电话</string>
    <string name="bank">开户行</string>
    <string name="account_number">账号</string>
    <string name="feed_back_success">反馈成功</string>
    <string name="begin_cannot_later_than_end">开始时间不能晚于结束时间</string>
    <string name="no_this_knowledge">暂无这条知识</string>
    <string name="comment">评论</string>
    <string name="write_comment">写评论</string>
    <string name="newuser">新用户</string>
    <string name="newuser_input_phonenum">请输入手机号码</string>
    <string name="newuser_title">新用户</string>
    <string name="newuser_agree">点击“下一步”按钮即表示您同意浪潮的</string>
    <string name="newuser_protocal_text">《用户协议》</string>
    <string name="newuser_perfect_text">完善信息</string>
    <string name="newuser_perfect_nickname">昵称</string>
    <string name="newuser_perfect_gender">男</string>
    <string name="login_invaliad_account_or_pwd">用户名或密码错误</string>
    <string name="login_captchas_input_error">验证码错误</string>
    <string name="login_pw_modified"> 密码已修改</string>
    <string name="login_phonenum_has_beeb_resgistered">手机号已经注册，您可以选择直接登录，或者更换注册手机号</string>
    <string name="login_direct">直接登录</string>
    <string name="login_change_phone_num">更换号码</string>
    <string name="login_captchas_login">短信登录 </string>
    <string name="login_by_account">账号密码登录</string>
    <string name="login_find_password">找回密码</string>
    <string name="login_get_captchas">通过短信修改密码</string>
    <string name="login_get_captchas_code">获取验证码</string>
    <string name="login_send_captchas">发送验证码 </string>
    <string name="login_set_pwd">设置密码 </string>
    <string name="login_resend">重新发送（  ） </string>
    <string name="login_resent">当前</string>
    <string name="login_captchas_sent"> 验证码已发送到手机：</string>
    <string name="login_please_input_captchas">请输入验证码</string>
    <string name="login_please_input_phone_num">请输入手机号码</string>
    <string name="login_phone_num_illegal_format">手机号码格式不正确</string>
    <string name="login_no_phone_num">手机号不存在</string>
    <string name="login_loading_text">登录中...</string>
    <string name="login_please_input_username">请输入用户名</string>
    <string name="login_please_input_password"> 请输入密码</string>
    <string name="login">登录</string>
    <string name="login_newuser_text">新用户注册</string>
    <string name="login_captchas_getcode_success">验证码发送成功</string>
    <string name="login_reverification">重新验证</string>
    <string name="login_code_verification_failure">验证码校验失败</string>
    <string name="login_sms">短信登录</string>
    <string name="login_cost_report"> 费用报告</string>
    <string name="app_input_mail_password">请输入公司邮箱密码</string>
    <string name="app_need_input_mail_password">第一次使用或密码修改后需要输入</string>
    <string name="modify_password_invalid">密码必须是6-16位的数字、字符组合（不能是纯数字）</string>
    <string name="modify_password">修改密码</string>
    <string name="modify_input_code">输入新密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="modify_first_use">这是您第一次使用云+，是否设置浪潮通行证密码，以方便下次登录</string>
    <string name="news_day_mode_text">标准模式</string>
    <string name="news_night_mode_text">夜间模式</string>
    <string name="news_share_text">分享</string>
    <string name="news_font_smaller">小</string>
    <string name="news_font_normal">标准</string>
    <string name="news_font_middle">中</string>
    <string name="news_font_big_text">大</string>
    <string name="news_font_biggest_text">超大</string>
    <string name="news_font_name_text">字号</string>
    <string name="save">保存</string>
</resources>