<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@drawable/shape_upgrade_dialog"
              android:orientation="vertical">
    <TextView
        android:id="@+id/app_update_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/bigger_textsize"
        android:text="@string/app_input_mail_password"
        android:gravity="center_horizontal"
        android:textColor="@color/app_dialog_title_color"
        android:layout_marginTop="20dp"
        />
    <EditText
        android:id="@+id/edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:maxLines="1"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:hint="@string/app_need_input_mail_password"
        android:inputType="textPassword"
        android:textColor="@color/text_black"
        android:textSize="@dimen/content_normal_textsize"
        />
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/content_border" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/cancel"
            android:textColor="@color/app_dialog_title_color"
            android:textSize="@dimen/header_textsize" />

        <View
            android:layout_width="1dp"
            android:layout_height="38dp"
            android:layout_gravity="center_vertical"
            android:background="@color/content_border" />

        <Button
            android:id="@+id/ok_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/ok"
            android:textColor="@color/app_dialog_title_color"
            android:textSize="@dimen/header_textsize" />
    </LinearLayout>
</LinearLayout>