<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ll_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:id="@+id/rl_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height"
        android:background="#ffffff">

        <ImageButton
            android:id="@+id/ibt_back"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_centerVertical="true"
            android:background="@null"
            android:onClick="onClick"
            android:padding="11dp"
            android:scaleType="fitXY"
            android:src="?attr/ic_back_btn" />

        <Button
            android:id="@+id/bt_skip"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_alignParentRight="true"
            android:background="@null"
            android:gravity="center_vertical"
            android:minWidth="0dp"
            android:onClick="onClick"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/skip"
            android:textColor="#36A5F6"
            android:textSize="15sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:paddingLeft="27dp"
        android:paddingRight="30dp"
        android:text="@string/modify_password"
        android:textColor="#FF333333"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/tv_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_title"
        android:layout_marginTop="5dp"
        android:paddingLeft="27dp"
        android:paddingRight="30dp"
        android:text="@string/modify_first_use"
        android:textColor="#3E4A59"
        android:textSize="16sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tv_content"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="27dp"
        android:paddingRight="30dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_password_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleDrawable="@drawable/app_edittext_eye_selector"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/et_password_new"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/modify_input_code"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:paddingBottom="17dp"
                android:paddingTop="17dp"
                android:singleLine="true"
                android:textColor="#333333"
                android:textSize="15sp"
                android:theme="@style/MyEditText" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleDrawable="@drawable/app_edittext_eye_selector"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/et_password_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="@string/confirm_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:paddingBottom="17dp"
                android:paddingTop="17dp"
                android:singleLine="true"
                android:textColor="#333333"
                android:textSize="15sp"
                android:theme="@style/MyEditText" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/modify_password_invalid"
            android:textColor="@android:color/darker_gray"
            android:textSize="12sp" />

        <Button
            android:id="@+id/bt_save"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="70dp"
            android:background="@drawable/bg_login_btn_unable"
            android:enabled="false"
            android:gravity="center"
            android:onClick="onClick"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="15sp" />
    </LinearLayout>
</RelativeLayout>


